grafana/grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`console.grafana.internal.legohunter.io`)
      kind: Rule
      services:
        - kind: Service
          name: grafana
          port: 80   # must match Grafana Service port
  tls:
    secretName: grafana-tls
